RESOLVED FIXED148352
Page::renderTreeSize() does not include anonymous renderers.
https://bugs.webkit.org/show_bug.cgi?id=148352
Summary Page::renderTreeSize() does not include anonymous renderers.
alan
Reported 2015-08-21 20:45:24 PDT
SSIA
Attachments
Patch (3.13 KB, patch)
2015-08-21 20:55 PDT, alan
no flags
alan
Comment 1 2015-08-21 20:55:55 PDT
Andreas Kling
Comment 2 2015-08-22 01:54:09 PDT
Comment on attachment 259706 [details] Patch r=me I think this is only used for approximating if we've laid out enough content in order to have a nice-ish switch from navigation snapshot to actual rendering, right? Nevertheless, having more accurate data for that heuristic seems like a good thing.
alan
Comment 3 2015-08-22 05:51:01 PDT
(In reply to comment #2) > Comment on attachment 259706 [details] > Patch > > r=me > I think this is only used for approximating if we've laid out enough content > in order to have a nice-ish switch from navigation snapshot to actual > rendering, right? > Nevertheless, having more accurate data for that heuristic seems like a good > thing. Indeed. The actual reason to have more accurate bookkeeping is this bug 148309.
WebKit Commit Bot
Comment 4 2015-08-22 06:38:13 PDT
Comment on attachment 259706 [details] Patch Clearing flags on attachment: 259706 Committed r188821: <http://trac.webkit.org/changeset/188821>
WebKit Commit Bot
Comment 5 2015-08-22 06:38:18 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.