Page::renderTreeSize() does not include anonymous renderers. https://bugs.webkit.org/show_bug.cgi?id=148352

Reviewed by Andreas Kling.

Anonymous renderes take the document as their node. Instead
of checking whether the node is the document, we could just check
if the RenderView is available.

* rendering/RenderObject.cpp:
(WebCore::RenderObject::RenderObject):
(WebCore::RenderObject::~RenderObject):
* rendering/RenderView.cpp:
(WebCore::RenderView::RenderView): Deleted.
* rendering/RenderView.h: Include the RenderView in render tree size as well.


Canonical link: https://commits.webkit.org/166455@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188821 268f45cc-cd09-0410-ab3c-d52691b4dbfc